--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,25 +1,24 @@
-
-
 .hero {
-  position: relative;
+  /* position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh; 
-  color: white;
-  text-align: center;
-  overflow: hidden;
-  background-color:#080808;
-  background-size: cover; 
+  color: white; */
+  /* text-align: center; */
+  /* overflow: hidden; */
+  /* background-color:#080808; */
+  /* background-size: cover; 
   background-position: center; 
-  background-repeat: no-repeat;
-  place-content: center;
-  overflow: visible;
+  background-repeat: no-repeat; */
+  /* place-content: center; */
+  /* overflow: visible; */
   opacity: 0;
   animation: fadeIn 0.5s forwards;
   animation-delay: 0.1s; /* Match this delay to the loading timeout */
 }
 
+/* Fade anim for loading */
 @keyframes fadeIn {
   to {
     opacity: 1;
@@ -51,6 +50,7 @@
   }
 
 
+  /* Corner shapes */
   .triangle {
     width: 0; 
     height: 0;
@@ -74,6 +74,7 @@
     background-color: #9c10a8;
     filter: blur(200px);
   }
+
   .square2 {
     top: 0; 
     right: 0;
@@ -82,34 +83,7 @@
     background-color: #fdf900;
     filter: blur(200px);
   }
-  @keyframes rotate {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  
-  .gradient {
-    --size: 750px;
-    --speed: 50s;
-    --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
-    position: absolute;
-    width: var(--size);
-    height: var(--size);
-    filter: blur(calc(var(--size) / 5));
-    background-image: linear-gradient(hsl(222, 84%, 60%), hsl(164, 79%, 71%));
-    animation: rotate var(--speed) var(--easing) alternate infinite;
-    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-    z-index: 1; 
-  }
-  
-  @media (min-width: 720px) {
-    .gradient {
-      --size: 500px;
-    }
-  }
+
   * {
     transition: all 0.5s ease-out;
   }
@@ -214,4 +188,37 @@
       transform: skewX(10deg) skewY(-10deg);
     }
   }
+
+
   
+    /* Middle spinny keyframes*/
+  /* @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } */
+   
+  /* Middle spinny */
+  /* .gradient {
+    --size: 750px;
+    --speed: 50s;
+    --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
+    position: absolute;
+    width: var(--size);
+    height: var(--size);
+    filter: blur(calc(var(--size) / 5));
+    background-image: linear-gradient(hsl(222, 84%, 60%), hsl(164, 79%, 71%));
+    animation: rotate var(--speed) var(--easing) alternate infinite;
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    z-index: 1; 
+  }
+  
+  @media (min-width: 720px) {
+    .gradient {
+      --size: 500px;
+    }
+  } */
+   
