--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -99,7 +99,7 @@
     font-size: 30px;
     font-weight: 700;
     line-height: 1.2;
-    color: #fff;
+    color: #ffffff;
     letter-spacing: 5px;
     z-index: 1;
     animation: shift 1s ease-in-out infinite alternate;
