--- a/src/components/Header/BackgroundAnim.css
+++ b/src/components/Header/BackgroundAnim.css
@@ -1,4 +1,6 @@
 /* Not sure if this is needed, can be deleted supposedly to help with offloading and increase performance */
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+
 .aurora-background {
     position: absolute;
     inset: 0;
@@ -23,3 +25,11 @@
         background-position: 60% 50%, 50% 50%;
     }
 }
+
+
+/* .name {
+    font-family: "Courgette", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+ */
